--- a/config/que_schedule.yml
+++ b/config/que_schedule.yml
@@ -1,5 +1,6 @@
 get_news_articles_job:
-  cron: "*/10 * * * *" # Run every 10 minute
+  # cron: "0 1 * * *" # Run every day at 01:00
+  cron: "* * * * *" # Run every 1 minute
   class: Schedule::GetNewsArticlesJob
   queue: schedule
   schedule_type: default
