--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "jquery-ujs": "^1.2.2",
+    "local-time": "^2.1.0",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "select2": "^4.1.0-rc.0",
