--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "bootstrap-datepicker": "^1.9.0",
     "flag-icon-css": "^3.5.0",
     "jquery": "^3.5.1",
-    "jquery-timepicker": "^1.3.3",
     "jquery-ui": "^1.12.1",
     "jquery-ujs": "^1.2.2",
     "local-time": "^2.1.0",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "select2": "^4.1.0-rc.0",
+    "timepicker": "^1.13.18",
     "turbolinks": "^5.2.0",
     "webticker": "^3.0.0"
   },
