--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "bootstrap": "^4.5.3",
     "bootstrap-datepicker": "^1.9.0",
+    "date-fns": "^2.20.0",
     "flag-icon-css": "^3.5.0",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
