--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "select2": "^4.1.0-rc.0",
     "timepicker": "^1.13.18",
     "turbolinks": "^5.2.0",
-    "twilio-video": "^2.15.1"
+    "twilio-video": "^2.15.1",
+    "video.js": "^7.14.3"
   },
   "version": "0.1.0",
   "devDependencies": {
