Update ffmpeg install script

--- a/.ebextensions/ffmpeg.config
+++ b/.ebextensions/ffmpeg.config
@@ -18,27 +18,16 @@ packages:
     ImageMagick-devel: []
     
 commands:
-  01-wget:
-    command: "sudo wget -O /usr/local/src/ffmpeg.tar.xz https://ffmpeg.org/releases/ffmpeg-4.3.tar.bz2"
+  01-create-ffmpeg-dir:
+    cwd: /usr/local/bin
+    command: "if [ ! -d /usr/local/bin/ffmpeg ] ; then sudo mkdir ffmpeg; fi"
     
-  02-mkdir:
-    command: "if [ ! -d /usr/local/src/ffmpeg ] ; then sudo mkdir -p /usr/local/src/ffmpeg; fi"
+  02-download-static-ffmpeg:
+    cwd: /usr/local/bin/ffmpeg
+    command: "sudo wget https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz"
     
-  03-tar:
-    command: "sudo tar xvf /usr/local/src/ffmpeg.tar.xz -C /usr/local/src/ffmpeg"
+  03-unzip-tar:
+    command: "sudo tar xvf /usr/local/bin/ffmpeg/ffmpeg-release-amd64-static.tar.xz -C /usr/local/bin/ffmpeg"
     
-  04-install-ffmpeg:
-    cwd: /usr/local/src/ffmpeg/ffmpeg-4.3
-    command: ./configure --prefix=/usr --disable-static --enable-shared --disable-avdevice --disable-doc --disable-htmlpages --disable-manpages --disable-programs --disable-encoders --disable-muxers --enable-swscale --disable-yasm --enable-protocol=file --enable-protocol=http --enable-iconv && make -j4 && sudo make install
-     
-  05-get-ffmpegthumbnailer:
-    cwd: /usr/local/src
-    command: "if [ ! -d /usr/local/src/ffmpegthumbnailer ] ; then sudo git clone https://github.com/dirkvdb/ffmpegthumbnailer.git; fi"
-    
-  06-cmake-ffmpegthumbnailer:
-    cwd: /usr/local/src/ffmpegthumbnailer
-    command: PKG_CONFIG_PATH=/usr/lib/pkgconfig sudo -E cmake3 -DCMAKE_BUILD_TYPE=Release -DENABLE_GIO=ON -DENABLE_THUMBNAILER=ON .
-    
-  07-make-ffmpegthumbnailer:
-    cwd: /usr/local/src/ffmpegthumbnailer
-    command: make && sudo make install
+  04-create-simlink:
+    command: "sudo ln -s /usr/local/bin/ffmpeg/ffmpeg-4.4-amd64-static/ffmpeg /usr/bin/ffmpeg"
