One more fix in ffmpeg script

--- a/.ebextensions/ffmpeg.config
+++ b/.ebextensions/ffmpeg.config
@@ -30,4 +30,4 @@ commands:
     command: "sudo tar xvf /usr/local/bin/ffmpeg/ffmpeg-release-amd64-static.tar.xz -C /usr/local/bin/ffmpeg"
     
   04-create-simlink:
-    command: "if [ ! -L "/usr/bin/ffmpeg" ] ; then sudo ln -s /usr/local/bin/ffmpeg/ffmpeg-4.4-amd64-static/ffmpeg /usr/bin/ffmpeg; fi"
+    command: "if [ ! -L '/usr/bin/ffmpeg' ] ; then sudo ln -s /usr/local/bin/ffmpeg/ffmpeg-4.4-amd64-static/ffmpeg /usr/bin/ffmpeg; fi"
