Install ffmpeg and imagemagick

--- a/.ebextensions/00_install_packages.config
+++ b/.ebextensions/00_install_packages.config
@@ -1,3 +1,33 @@
 packages:
-   yum:
-     git: []
+  yum:
+    autoconf: []
+    automake: []
+    bzip2: []
+    bzip2-devel: []
+    cmake3: []
+    freetype-devel: []
+    gcc: []
+    gcc-c++: []
+    git: []
+    libtool: []
+    make: []
+    mercurial: []
+    pkgconfig: []
+    zlib-devel: []
+    ImageMagick: []
+    ImageMagick-devel: []
+    
+commands:
+  01-create-ffmpeg-dir:
+    cwd: /usr/local/bin
+    command: "if [ ! -d /usr/local/bin/ffmpeg ] ; then sudo mkdir ffmpeg; fi"
+    
+  02-download-static-ffmpeg:
+    cwd: /usr/local/bin/ffmpeg
+    command: "sudo wget https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz"
+    
+  03-unzip-tar:
+    command: "sudo tar xvf /usr/local/bin/ffmpeg/ffmpeg-release-amd64-static.tar.xz -C /usr/local/bin/ffmpeg"
+    
+  04-create-simlink:
+    command: "if [ ! -L '/usr/bin/ffmpeg' ] ; then sudo ln -s /usr/local/bin/ffmpeg/ffmpeg-4.4.1-amd64-static/ffmpeg /usr/bin/ffmpeg; fi"
