Installed activeadmin_addons, removed select2

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "activeadmin_addons": "^1.0.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "bootstrap": "^4.5.3",
     "bootstrap-datepicker": "^1.9.0",
@@ -22,7 +23,6 @@
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "recorderjs": "https://github.com/mattdiamond/Recorderjs.git",
-    "select2": "^4.1.0-rc.0",
     "timepicker": "^1.13.18",
     "turbolinks": "^5.2.0",
     "twilio-video": "^2.15.1",
